--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ from{
 
   left:0;
   background-color: aqua;
+  color: black;
   
 
 
@@ -40,6 +41,8 @@ to{
 
   /* font-size: 2cm;  */
   background-color: yellow;
+  color: red;
+
 
 
 
@@ -59,26 +62,3 @@ width:200px
 
 
 
-/* .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
